# smol-v

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  Changelog.md  README.md  launch.vs.json
.github/workflows/: main.yml
projects/: Makefile
projects/smolv.xcodeproj/: project.pbxproj
projects/smolv.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/visualstudio2015/: smolv.sln  smolv.vcxproj  smolv.vcxproj.filters
source/: smolv.cpp  smolv.h
testing/: testmain.cpp
tests/smolv-dumps/2016-08-31/: unity-11976-3300-0-exp.spirv  unity-11976-3300-0.smolv  (+29 more)
tests/spirv-dumps/: s0-0002-ca3af858.spirv  s0-0003-6ccb7b5e.spirv  s0-0004-d2ba7e35.spirv  s0-0005-1eb77240.spirv  s0-0007-ca8748eb.spirv  s0-0009-e4ff870b.spirv  s0-0010-9379a08b.spirv  s0-0011-19016092.spirv  s0-0011-fe5ada8b.spirv  s0-0012-fc99d1e7.spirv  s0-0013-2190e4b3.spirv  s0-0014-3ba60738.spirv  s0-0014-42341ba0.spirv  s0-0015-1b4af3ab.spirv  s0-0016-cc22f312.spirv  s0-0019-68bab1cd.spirv  s0-0020-cb89e824.spirv  s0-0023-e226aa8a.spirv  s0-0024-9b5e5139.spirv  s0-0025-e1567d6d.spirv  s0-0029-fc9c1174.spirv  s0-0031-1a0d9226.spirv  s0-0032-9f4fab1d.spirv  s0-0034-5c3d45dc.spirv  s0-0046-0b926d9c.spirv  s1-0001-04d9d27b.spirv  s1-0003-c54216ae.spirv  s1-0006-85d79507.spirv  s1-0009-0c858280.spirv  s1-0011-2fed16ab.spirv  s1-0012-21b778d5.spirv  s1-0013-241e9fc8.spirv  s1-0014-2ea8dc83.spirv  s1-0015-3b3a60bf.spirv  s1-0016-40492bcb.spirv  s1-0017-884cc79d.spirv  s1-0018-319798ba.spirv  s1-0020-7363f5c5.spirv  s1-0021-e914f581.spirv  s1-0022-30eff697.spirv  (+20 more)
(+353 files in other folders)
